--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -180,7 +180,7 @@
     <!-- Third graphic container-->
         <div class="incarceration-graph"><br>
           <div class="graphic-container">
-            <div class="chart-title"><b>Lifer release in Maryland by governor administrations</b></div>
+            <div class="chart-title"><b>Lifer release in Maryland by gubernatorial administration</b></div>
             <div class="chart-description">Since 1995, 49 individuals serving life sentences in Maryland prisons have been released. Here's a breakdown in population and release method across each administration:</div><br>
             <div class="chart-author">By HANNAH GASKILL</div><br>
 
@@ -254,7 +254,7 @@
     <p>Crime and punishment became hot issues in Maryland in 1993, when &quot;model inmate&quot; Rodney Stokes &mdash; on work release, the last step before parole &mdash; killed his former girlfriend and himself.</p><br><br>
 
     <!-- first graphic container-->
-    <div class="incarceration-graph"><br>
+    <div class="incarceration-graph-race"><br>
         <div class="graphic-container">
           <div class="chart-title"><b>Racial makeup of juvenile lifers in Maryland</b></div>
           <div class="chart-description">76% of incarcerated juvenile lifers in Maryland are black while only 14% are white.</div><br>
@@ -263,7 +263,7 @@
         <div id="race"></div><br>
         <div class="chart-source">Data current as of October 2019</div>
         <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services </div><br>
-      </div><br><br>  <!-- END first graphic container-->
+      </div><span class="mobile-hide"><br><br></span>  <!-- END first graphic container-->
 
     <p>Gov. Robert Ehrlich, R, commuted two juvenile lifers and paroled none.</p><br><br>
 
@@ -314,7 +314,7 @@
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
-    <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
+    <p class="about">This work is a collaboration among the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
     </p><br><br>
 
     <div class="row sponsor-row">
