--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Title Animation-->
     <div class="centered">
       <p class="line-1 anim-typewriter">Growing Up Behind Bars</p>
-        <div id="test"><hr>The United States is the only country to condemn people to life in prison for crimes committed as minors. In recent years the Supreme Court has ruled this unconstitutional. Yet more than 2,000 so-called juvenile lifers remain in prison in what the court says is cruel and unusual punishment.</div>
+        <div id="test"><hr>The United States was the only country to condemn minors to life in prison with no chance for parole. In recent years the Supreme Court has ruled this unconstitutional. Yet more than 2,000 so-called juvenile lifers remain in prison in what the court says is cruel and unusual punishment.</div>
     </div>
 
   <!-- Mobile Only Title-->
@@ -135,7 +135,7 @@
       </div><br>
     </div><br>
 
-    <div class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the <a href="">PBS NewsHour</a> by correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Phillip Merrill College of Journalism (<span style="font-style: italic;">Video courtesy PBS NewsHour</span>).</div><br>
+    <div class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the <a href="">PBS NewsHour</a> by correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Philip Merrill College of Journalism (<span style="font-style: italic;">Video courtesy PBS NewsHour</span>).</div><br>
 
     <hr style="width:20%; border:1px solid white;"><br>
 
@@ -146,9 +146,9 @@
             <div class="card-index box-shadow">
               <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/flag-thumb.jpg" alt="Card image cap">
               <div class="card-body d-flex flex-column">
-                <p class="d-inline-block article-title"><a href="glendening-effect.html" style="color: white !important">The Glendening Effect</a></p>
+                <p class="d-inline-block article-title"><a href="glendening-effect.html" style="color: white !important">The Glendening effect</a></p>
                 <p class="card-text article-blurb">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changed criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but its impact continued until now, when Gov. Hogan may be signaling new flexibility.</p>
-                <p class="card-text article-author">By Hannah Gaskill</p>
+                <p class="card-text article-author">By Hannah Gaskill and Lynsey Jeffery</p>
               </div>
 
             </div>
@@ -160,7 +160,7 @@
               <div class="card-index flex-md-row box-shadow">
                 <img class="card-img-left flex-auto d-none d-md-block index-img" src="images/lomax-thumb.jpg" alt="Card image cap">
                 <div class="card-body d-flex flex-column">
-                  <p class="d-inline-block article-title"><a href="lomax.html" style="color: white !important">The Victims’ Side</a></p>
+                  <p class="d-inline-block article-title"><a href="lomax.html" style="color: white !important">The victims’ side</a></p>
                   <p class="card-text article-blurb">Juvenile lifers have committed horrible crimes that have stolen loved ones from their families. How do we deal with their pain?</p>
                   <p class="card-text article-author">By Lynsey Jeffery</p>
                 </div>
@@ -264,7 +264,7 @@
   <hr style="border: 1px solid white; width:50%;"><br>
 
   <h1 style="color: #D9B269; font-size: 1.5em;">About This Project</h1><br>
-    <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
+    <p class="about">This work is a collaboration among the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
     </p><br><br>
 
     <div class="row sponsor-row">
