--- a/lomax.html
+++ b/lomax.html
@@ -135,9 +135,9 @@
     <p>The U.S. Supreme Court has recognized different standards for juveniles in light of their immaturity, vulnerability and changeability.</p><br><br>
 
     <p class="pullquote">
-      <span style="font-size: 1.7em; color: #D9B269;">&quot;</span>&nbsp;
+      <span style="font-size: 1.7em; color: #D9B269;">&quot;</span>
 
-      <span>Some of the people who were incarcerated who weren’t the same people that they were when they committed the crime.</span>&nbsp;
+      <span>What I was able to do is observe some of the people who were incarcerated who weren’t the same people that they were when they committed the crime.</span>
 
       <span style="font-size: 1.7em;color: #D9B269;">&quot;</span>&nbsp; <br>
 
@@ -170,7 +170,7 @@
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
-    <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
+    <p class="about">This work is a collaboration among the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
     </p><br><br>
 
     <div class="row sponsor-row">
