--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -139,7 +139,7 @@
     <p>The juvenile-lifer population in Pennsylvania began to increase in the 1970s and peaked in the 1990s amid fears of a new generation of criminals, the &quot;superpredators&quot; &mdash; a prediction that never materialized.</p><br><br>
 
     <!-- first graphic container-->
-      <div class="incarceration-graph"><br>
+      <div class="incarceration-graph-lifers"><br>
           <div class="graphic-container">
             <div class="chart-title"><b>Examining juveniles sentenced to life by decade</b></div>
             <div class="chart-description">The number of juveniles sentenced to life without parole in Pennsylvania spiked in the '90s, a consequence of tough-on-crime policies and growing fears of &quot;superpredators.&quot;</div><br>
@@ -148,7 +148,7 @@
           <div id="incarceration1"></div><br>
           <div class="chart-source">Data current as of September 2019</div>
           <div class="chart-source">Source: Pennsylvania Department of Corrections</div><br>
-        </div><br><br>  <!-- END first graphic container-->
+        </div><span class="mobile-hide"><br><br></span>  <!-- END first graphic container-->
 
 
   <!-- first graphic container
@@ -232,7 +232,7 @@
         <div class='scroll-text'>
           <div class='step'> <!-- Step 1 -->
             <p class="scrolling-text"><span class="red"><strong>Juvenile Justice in Philadelphia</strong></span></p><br>
-            <p class="scrolling-text">Philadelphia had the largest juvenile lifer population of any jurisdiction across the United States at 304.</p>
+            <p class="scrolling-text">Philadelphia had the largest juvenile lifer population of any jurisdiction across the United States at 304 up until 2016.</p>
           </div>
           <div class='step'> <!-- Step 2 -->
             <p class="scrolling-text">288 of the juvenile lifers were black or hispanic.</p>
@@ -355,7 +355,7 @@
 
       <div class="row">
         <div class="col-sm-12">
-          <img src="images/map.png">
+          <img src="images/map.png" class="img-responsive">
         </br>
         </div>
       </div>
@@ -437,7 +437,7 @@
 
     <p><img src="images/baynes-levin.jpg" alt="Joseph Baynes and public defender Helen Levin" width="100%"></p>
 
-    <p class="photo-caption">Joseph Baynes with his public defender Helen Levin, one of the three co-chairs of the JLWOP unit. (Photo by Camila Velloso | Capital News Service)</p><br><br>
+    <p class="photo-caption">Joseph Baynes with his public defender Helen Levin, one of the three co-chairs of the JLWOP unit at the Defender Association of Philadelphia. (Photo by Camila Velloso | Capital News Service)</p><br><br>
 
     <p>&quot;It's an incredibly important moment in justice reform in this country because the successful reintegration of these individuals should force us to rethink our whole justice paradigm,&quot; Levick said.</p><br><br>
 
@@ -466,7 +466,7 @@
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
-    <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
+    <p class="about">This work is a collaboration among the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
     </p><br><br>
 
     <div class="row sponsor-row">
