--- a/other-states.html
+++ b/other-states.html
@@ -200,7 +200,7 @@
 
     <p class="end-gold" style="color: #D9B269; font-size: 1.5em;">About This Project</p><br>
 
-    <p class="about">This work is a collaboration between the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
+    <p class="about">This work is a collaboration among the University of Maryland's Howard Center for Investigative Journalism and Capital News Service and the PBS NewsHour.
     </p><br><br>
 
     <div class="row sponsor-row">
