--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <!-- Mobile Only Title-->
     <div class="centered-alt">
       <div class="alternate-title">Growing Up Behind Bars</div><br>
-      <div class="article-desc">The United States is the only country to condemn people to life in prison for crimes committed as minors &mdash; something the Supreme Court declared in recent years unconsitutional.</div><br>
+      <div class="article-desc">The United States is the only country to condemn people to life in prison for crimes committed as minors &mdash; something the Supreme Court declared in recent years unconstitutional.</div><br>
     </div>
 
   </div><!-- END Hero Container -->
@@ -131,11 +131,11 @@
   <!-- PBS Video -->
     <div class="pbs-video">
       <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/M2GgIXkvFeE"></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Y0k7UNpz1po"></iframe>
       </div><br>
     </div><br>
 
-    <div class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the <a href="">PBS NewsHour</a> by correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Philip Merrill College of Journalism (<span style="font-style: italic;">Video courtesy PBS NewsHour</span>).</div><br>
+    <div class="caption">The story of Maryland’s juvenile lifers and their years without parole was told on the <a href="https://www.pbs.org/video/juvenile-lifers-1576021238/">PBS NewsHour</a> by correspondent John Yang. The story was researched, shot, and edited by students of the University of Maryland’s Philip Merrill College of Journalism (<span style="font-style: italic;">Video courtesy PBS NewsHour</span>).</div><br>
 
     <hr style="width:20%; border:1px solid white;"><br>
 
