--- a/lomax.html
+++ b/lomax.html
@@ -123,14 +123,14 @@
   <!-- Author and date -->
     <p class="author">By <span>LYNSEY JEFFERY</span></p>
 
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
   <!-- Article Body -->
     <p class="dateline">COLLEGE PARK, Maryland &mdash; Parole is not one-sided. For every juvenile lifer deemed ready to re-enter society, there are the members of the victim’s family who must accept that their loved one’s killer is now free, whether they have forgiven or not.</p><br><br>
 
     <p>Walter Lomax can see parole from both sides. During his 38 years of wrongful incarceration on a murder charge he lost both his younger brother and a grandson to murder in Baltimore.</p><br><br>
 
-    <p>&quot;I am in a unique position because I have the benefit of having lost someone, but also have met so many people who’ve committed those crimes,&quot; Lomax said</p><br><br>
+    <p>&quot;I am in a unique position because I have the benefit of having lost someone, but also have met so many people who’ve committed those crimes,&quot; Lomax said.</p><br><br>
 
     <p>The U.S. Supreme Court has recognized different standards for juveniles in light of their immaturity, vulnerability and changeability.</p><br><br>
 
@@ -154,7 +154,7 @@
 
     <p>&quot;It allowed her to begin to start healing,&quot; Lomax said. &quot;She began to see lifers as human beings as opposed to monsters who’ve committed a hideous crime.&quot;</p><br><br>
 
-    <p>Lomax believes that, like that mother, victim’s families can come to see the perpetrators as victims themselves. He describes them as victims of the environment they grew up in, environments which often promoted their violent behavior.</p><br><br>
+    <p>Lomax believes that, like that mother, victims' families can come to see the perpetrators as victims themselves. He describes them as victims of the environment they grew up in, environments which often promoted their violent behavior.</p><br><br>
 
     <p>Many in Lomax’s family are still unable to forgive the killers of his brother and grandson. The wounds are too raw. Lomax said he holds no bitterness or anger because he had the ability to see the killers as human beings. He tries to pass that perspective on to the victims’ families.</p><br><br>
 
