--- a/other-states.html
+++ b/other-states.html
@@ -121,7 +121,7 @@
 
   <!-- Author and Date -->
     <p class="author">By <span>DOMINIQUE JANIFER</span><br> and <span>ATHIYAH AZEEM </span></p>
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
   <!-- Article Body -->
     <p>In 1988, George H. W. Bush successfully labeled his presidential opponent, Michael Dukakis, as someone who coddled criminals, setting the stage for the early 1990s, when politicians across the country tried to outdo one another in being tougher on crime.</p><br><br>
