--- a/pennsylvania.html
+++ b/pennsylvania.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:title" content="Pennsylvania's About-Face">
-    <meta name="twitter:description" content="In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served.">
+    <meta name="twitter:description" content="In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been resentenced, many to time served.">
     <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/twitter-pa.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-pa.jpg" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
-    <meta property="og:description" content="In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served." />
+    <meta property="og:description" content="In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been resentenced, many to time served." />
 
 
     <!-- Bootstrap CSS -->
@@ -109,7 +109,7 @@
       <div class="cover-img relative-img" style="background-image: url('images/liberty-bell.jpg')"></div>
       <div class="centered">
         <div class="article-title">Pennsylvania’s About-Face</div>
-        <div class="article-desc">In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served.</div><br>
+        <div class="article-desc">In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been resentenced, many to time served.</div><br>
       </div>
 
     </div><!-- END Hero Container -->
@@ -123,7 +123,7 @@
 
   <!-- Author and date -->
     <p class="author">By <span>CAMILA VELLOSO</span></p>
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
   <!-- Article Body -->
     <p class="dateline">PHILADELPHIA &mdash; Joseph Baynes spent 41 years behind bars, locked up at age 17 for his role in a fatal robbery.</p><br><br>
@@ -190,7 +190,7 @@
 
     <p>On December 22, 2016, at age 59, Baynes was resentenced to 30 years to life. He became eligible for parole, receiving credit for time served. </p><br><br>
 
-    <p>Prison staffers’ character-reference letters within court documents portray Baynes as an &quot;exemplary&quot; inmate prepared to make a &quot;positive contribution to society.&quot;</p><br><br>
+    <p>Prison staffers’ character-reference letters within court documents portrayed Baynes as an &quot;exemplary&quot; inmate prepared to make a &quot;positive contribution to society.&quot;</p><br><br>
 
     <p>Four months later, Baynes was released.</p><br><br>
 
@@ -216,7 +216,7 @@
 
     <p>&quot;When you place the burden on the prosecutor, it is going to be harder to impose life without parole,&quot; said Levick, who argued before the court on behalf of defendant Qu’eed Batts. &quot;Rare and uncommon has to mean something.&quot; </p><br><br>
 
-    <p>After that ruling Philadelphia County alone resentenced in 304 cases more than half of the state’s juvenile lifer population.</p><br><br>
+    <p>After that ruling Philadelphia County alone resentenced, in 304 cases, more than half of the state’s juvenile lifer population.</p><br><br>
 
     <br><br><br><br>
 
@@ -619,13 +619,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Pennsylvania's About-Face: In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served."; //Tweet text
+    var tweet = "Pennsylvania's About-Face: In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been resentenced, many to time served."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/pennsylvania.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-pa.jpg"; //Picture URL
     var title = "Pennsylvania's About-Face"; //Post title
-    var description = "In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been re-sentenced, many to time served."; //Post description
+    var description = "In the Keystone State more than 500 juveniles served sentences of life without parole. Today many of them have been resentenced, many to time served."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/pennsylvania.html"; //Interactive URL
 
   </script>
