--- a/supreme-court.html
+++ b/supreme-court.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:title" content="Supreme Court Decisions">
-    <meta name="twitter:description" content="Beginning in 2005 the Court overturned many of the harshest policies aimed at juveniles.">
+    <meta name="twitter:description" content="Beginning in 2005, the Court overturned many of the harshest policies aimed at juveniles.">
     <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/twitter-sc.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-sc.jpg" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
-    <meta property="og:description" content="Beginning in 2005 the Court overturned many of the harshest policies aimed at juveniles." />
+    <meta property="og:description" content="Beginning in 2005, the Court overturned many of the harshest policies aimed at juveniles." />
 
 
     <!-- Bootstrap CSS -->
@@ -109,7 +109,7 @@
       <div class="cover-img relative-img" style="background-image: url('images/supreme-court-kim copy.jpg')"></div>
       <div class="centered">
         <div class="article-title">Supreme Court Decisions</div>
-        <div class="article-desc">Beginning in 2005 the Court overturned many of the harshest policies aimed at juveniles.</div><br>
+        <div class="article-desc">Beginning in 2005, the Court overturned many of the harshest policies aimed at juveniles.</div><br>
         <!--<div class="article-author">By CAMILA VELLOSO &nbsp | &nbsp OCTOBER 18, 2019</div>-->
       </div>
 
@@ -124,7 +124,7 @@
 
     <!-- Author and Date -->
     <p class="author">By <span>TOM BETTAG</span></p>
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
     <!-- Article body -->
     <p>Since 2005, the U.S. Supreme Court has accepted adolescent brain science demonstrating that children are different from adults in important ways &mdash;  ways critical to age-appropriate sentencing. Over 11  years, with four decisions, it has extended its protections for juvenile offenders. It is now considering a fifth case.</p><br><br><br>
@@ -343,13 +343,13 @@
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "Supreme Court Decisions: Beginning in 2005 the Court overturned many of the harshest policies aimed at juveniles."; //Tweet text
+    var tweet = "Supreme Court Decisions: Beginning in 2005, the Court overturned many of the harshest policies aimed at juveniles."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/supreme-court.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-sc.jpg"; //Picture URL
     var title = "Supreme Court Decisions"; //Post title
-    var description = "Beginning in 2005 the Court overturned many of the harshest policies aimed at juveniles."; //Post description
+    var description = "Beginning in 2005, the Court overturned many of the harshest policies aimed at juveniles."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/supreme-court.html"; //Interactive URL
 
   </script>
