--- a/three-states.html
+++ b/three-states.html
@@ -120,7 +120,7 @@
 
   <!-- Author and Date -->
     <p class="author">By <span>JAMIE KERNER</span> and <span>SARA SALIMI</span></p>
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
   <!-- Article Body -->
     <p>Maryland is one of only three states whose governors make the final decision on parole for people sentenced to life. The other two, Oklahoma and California, take very different paths.</p><br><br>
@@ -138,15 +138,15 @@
 
     <p>The same year, the Oklahoma Court of Criminal Appeals issued new sentencing guidelines. Going forward, juries could not impose life-without-parole without finding &quot;that the defendant is irreparably corrupt and permanently incorrigible.&quot;</p><br><br>
 
-    <p>The Legislature attempted a reversal, passing a bill allowing judges to give juveniles life with no parole. Gov. Mary Fallin vetoed it.</p><br><br>
+    <p>The Legislature attempted a reversal, passing a bill allowing judges to give juveniles life with no parole. Republican Gov. Mary Fallin vetoed it.</p><br><br>
 
     <p>Oklahoma requires defendants to file proper paperwork to request a lawyer. Only with judicial appointment can public defenders represent defendants in criminal cases.</p><br><br>
 
     <p>&quot;Our statute doesn’t allow us to initiate post-conviction applications in non- death penalty cases,&quot; Laughlin said. &quot;At this point, it’s incumbent on the individual to file a post-conviction application.&quot;</p><br><br>
 
-    <p>Those requirements have severely limited the number of resentencing cases. Only seven of the juvenile life-without-parole prisoners have been re-sentenced, according to <a href="https://www.enidnews.com/oklahoma/oklahoma-s-juvenile-life-without-parole-prisoners-struggle-to-get/article_38393fc2-6122-11e9-b4ba-13e9ae3620a7.html">Brianna Bailey of the Frontier</a>. Most sentenced as juveniles still have life-without-parole sentences. Since 2016, neither of the two governors has paroled a juvenile lifer. </p><br><br>
+    <p>Those requirements have severely limited the number of resentencing cases. Only seven of the juvenile life-without-parole prisoners have been resentenced, according to <a href="https://www.enidnews.com/oklahoma/oklahoma-s-juvenile-life-without-parole-prisoners-struggle-to-get/article_38393fc2-6122-11e9-b4ba-13e9ae3620a7.html">Brianna Bailey of the Frontier</a>. Most sentenced as juveniles still have life-without-parole sentences. Since 2016, neither of the two governors has paroled a juvenile lifer. </p><br><br>
 
-    <p>On Nov. 4, Oklahoma took one step toward prison reform. Faced with mounting costs and overcrowding, Gov. Kevin Stitt released 462 inmates incarcerated for drug possession and other nonviolent crimes. This did not affect juvenile lifers.</p><br><br><br>
+    <p>On Nov. 4, Oklahoma took one step toward prison reform. Faced with mounting costs and overcrowding, Republican Gov. Kevin Stitt released 462 inmates incarcerated for drug possession and other nonviolent crimes. This did not affect juvenile lifers.</p><br><br><br>
 
     <div class="border"></div><br>
 
@@ -155,11 +155,11 @@
 
     <p>While Maryland and Oklahoma have been slow to change juvenile parole procedures, California governors vowed to change theirs &mdash; and largely have.</p><br><br>
 
-    <p>Gov. Jerry Brown acted within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013, which allowed those sentenced to life without parole as juveniles to request new sentencing hearings.</p><br><br>
+    <p>Democratic Gov. Jerry Brown acted within months of the U.S. Supreme Court’s 2012 ban on mandatory life sentences without parole for juvenile offenders. He signed Senate Bill 9 in January 2013, which allowed those sentenced to life without parole as juveniles to request new sentencing hearings.</p><br><br>
 
     <p>In 2017,  Gov. Brown signed Senate Bill 394, outlawing life-without-parole sentences and granting juvenile lifers the right to parole hearings 25 years after conviction.</p><br><br>
 
-    <p>Brown’s successor, Gov. Gavin Newsom, went further, vowing in January 2019 to &quot;end the juvenile justice system as we know it.&quot; He proposed moving the Division of Juvenile Justice from the California Department of Corrections and Rehabilitation and placing it under the Health and Human Services Agency. </p><br><br>
+    <p>Brown’s successor, Democratic Gov. Gavin Newsom, went further, vowing in January 2019 to &quot;end the juvenile justice system as we know it.&quot; He proposed moving the Division of Juvenile Justice from the California Department of Corrections and Rehabilitation and placing it under the Health and Human Services Agency. </p><br><br>
 
     <p>&quot;Juvenile justice should be about helping kids imagine and pursue new lives &mdash; not jumpstarting the revolving door of the criminal justice system,&quot; Newsom said. &quot;The system should be helping these kids unpack trauma and adverse experiences many have suffered.&quot;</p><br><br>
 
