--- a/glendening-effect.html
+++ b/glendening-effect.html
@@ -16,7 +16,7 @@
 
     <!-- Twitter Card data -->
     <meta name="twitter:title" content="The Glendening Effect">
-    <meta name="twitter:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but it’s impact continues to this day.">
+    <meta name="twitter:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but its impact continues to this day.">
     <meta name="twitter:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/twitter-glendening.jpg">
     <meta name="twitter:card" content="summary_large_image">
 
@@ -27,7 +27,7 @@
     <meta property="og:image" content="https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-glendening.jpg" />
     <meta property="og:image:width" content="1200px" />
     <meta property="og:image:height" content="630px" />
-    <meta property="og:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,'' but it’s impact continues to this day." />
+    <meta property="og:description" content="Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,'' but its impact continues to this day." />
 
 
     <!-- Bootstrap CSS -->
@@ -110,7 +110,7 @@
       <div class="cover-img relative-img" style="background-image: url('images/flag1.jpg')"></div>
       <div class="centered">
         <div class="article-title">The Glendening Effect</div>
-        <div class="article-desc">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but it’s impact continues to this day.</div><br>
+        <div class="article-desc">Former Gov. Parris Glendening’s &quot;life means life&quot; policy changes criminal sentences for hundreds of prisoners. It is a decision he calls &quot;a mistake,&quot; but its impact continues to this day.</div><br>
       </div>
 
   </div><!-- END Hero Container -->
@@ -124,7 +124,7 @@
   <!-- Author and date -->
    <p class="headline">For Maryland’s juvenile lifers, the hope of leaving prison emerges</p><br>
     <p class="author">By <span>HANNAH GASKILL</span> and <span>LYNSEY JEFFERY</span></p>
-    <p class="date">DECEMBER 9, 2019</p><br><br>
+    <p class="date">Howard Center for Investigative Journalism</p><br><br>
 
   <!-- Article Body -->
     <p class="dateline">ANNAPOLIS, Maryland &mdash; For two decades Maryland governors have followed a tough-on-crime policy that denied parole to youths who had been sentenced to life. Gov. Larry Hogan is now softening that policy, allowing parole for three inmates convicted as juveniles.</p><br><br>
@@ -157,11 +157,11 @@
 
     <p>Hogan approved paroles for two of the men and allowed Davis’ to happen without his signature. </p><br><br>
 
-    <p>Until the Hogan administration, parole hadn’t been implemented for any lifer &mdash; adult or juvenile &mdash; since Gov. William Donald Schaefer, D, Glendening’s immediate predecessor. A number of inmates’ life sentences had been commuted, however.</p><br><br>
+    <p>Until the Hogan administration, parole hadn’t been granted for any lifer &mdash; adult or juvenile &mdash; since Gov. Parris Glendening, D, effectively ended it with his “life means life” stance based on the tough-on-crime political climate of the era.</p><br><br>
 
     <p>Glendening now regrets that decision and has publicly and repeatedly advocated a change in state law to remove the governor from the parole process. </p><br><br>
 
-    <p>&quot;I made a mistake,&quot; he said in a recent interview with “PBS NewsHour” correspondent John Yang. &quot;It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.&quot;</p><br><br>
+    <p>&quot;I made a mistake,&quot; he said in a recent interview with &quot;PBS NewsHour&quot; correspondent John Yang. &quot;It was a very bad mistake in the sense that it impacted people, it impacted subsequent administrations, but it was a mistake. And I think it's important to acknowledge.&quot;</p><br><br>
 
     <div class="video-content">
       <div class="embed-responsive embed-responsive-16by9">
@@ -249,7 +249,7 @@
 
     <p>The ACLU suit is pending. </p><br><br>
 
-    <p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. Until the 1990s, when rising crime rates spurred more stringent policies and public demonization of prisoners.</p><br><br>
+    <p>Maryland is one of only three states that requires a governor’s signature to grant parole in the case of life sentences. Governors granted paroles under this system until the 1990s, when rising crime rates spurred more stringent policies and public demonization of prisoners.</p><br><br>
 
     <p>Crime and punishment became hot issues in Maryland in 1993, when &quot;model inmate&quot; Rodney Stokes &mdash; on work release, the last step before parole &mdash; killed his former girlfriend and himself.</p><br><br>
 
@@ -265,9 +265,11 @@
         <div class="chart-source">Source: Maryland Department of Public Safety and Correctional Services </div><br>
       </div><span class="mobile-hide"><br><br></span>  <!-- END first graphic container-->
 
+    <p>In the last 24 years, seven juvenile lifers have been released from prison after their sentences were commuted.</p><br><br>
+
     <p>Gov. Robert Ehrlich, R, commuted two juvenile lifers and paroled none.</p><br><br>
 
-    <p>During Democrat Gov. Martin O’Malley’s eight years in office, he commuted the sentence of one juvenile who had been given a life term. He did not parole any lifers.</p><br><br>
+    <p>During Democrat Gov. Martin O’Malley’s eight years in office, he commuted the sentence of one juvenile who had been given a life term; he did not parole any juvenile lifers.</p><br><br>
 
     <p>Hogan had commuted the sentences of four juveniles as of late October before allowing the parole of the three juvenile lifers in November.</p><br><br>
 
@@ -281,7 +283,7 @@
 
     <p>The bill’s former House sponsor, Delegate Pam Queen, D-Montgomery, said in an interview with Capital News Service in October that there are plans for similar legislation in the upcoming session, and is looking to the Senate and its new president, Bill Ferguson, D-Baltimore, to determine what will or won’t make it through.</p><br><br>
 
-    <p>Lawmakers are looking to have the 2020 iteration of the bill sponsored by a member of the Senate Judicial Proceedings Committee. According to the chief of staff for Sen. Delores G. Kelley, D-Baltimore, a previous sponsor of the legislation, they are aiming for the bill to include new measures to account for family and victim concerns.</p><br><br>
+    <p>Lawmakers are looking to have the 2020 iteration of the bill sponsored by a member of the Senate Judicial Proceedings Committee. According to the chief of staff for Sen. Delores G. Kelley, D-Baltimore County, a previous sponsor of the legislation, they are aiming for the bill to include new measures to account for family and victim concerns.</p><br><br>
 
     <p>In 2018, Hogan signed an executive order addressing juvenile lifers specifically, requiring that the governor weigh the same elements as the Maryland Parole Commission when considering parole, as well as the inmate’s age at the time of the offense and any signs of maturity or transformative rehabilitation.</p><br><br>
 
@@ -463,13 +465,13 @@ var chart = c3.generate({
 <!-- Variables for social media icon popups -->
   <script type="text/javascript">
     //Twitter variables
-    var tweet = "The Glendening Effect: Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but it’s impact continues to this day."; //Tweet text
+    var tweet = "The Glendening Effect: Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls 'a mistake,' but its impact continues to this day."; //Tweet text
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/glendening-effect.html"; //Interactive URL
 
     //Facebook variables
     var picture = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/images/fb-glendening.jpg"; //Picture URL
     var title = "The Glendening Effect"; //Post title
-    var description = "Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls '&quot;'a mistake,'' but it’s impact continues to this day."; //Post description
+    var description = "Former Gov. Parris Glendening’s 'life means life' policy changes criminal sentences for hundreds of prisoners. It is a decision he calls '&quot;'a mistake,'' but its impact continues to this day."; //Post description
     var url = "https://cnsmaryland.org/interactives/fall-2019/behind-bars/glendening-effect.html"; //Interactive URL
 
   </script>
